# CP

./: .gitignore  CMakeLists.txt  CONTESTtemplate.cpp  CONTESTtemplate.py  GITHUB_TOKEN_SETUP.md  README.md  SETUP_GUIDE.md  autopush-cron.sh  autopush.service  autopush.sh  quick-commit.sh  template.cpp
 USACO/2016/prb2/: Subsequences Summing to Sevens.cpp
CF/edu/course/2/lesson/6/1/practice/contest/283911/problem/: A.cpp  B.cpp  C.cpp  D.cpp
Dqna/: Hashing1.cpp  hash5.py  hash6.py  hash7.cpp  hashing2.cpp  hashing3.cpp  hashing4.py
OA/cisco OA 3 march 2026/: problem.md
OA/contest1/: p1.cpp  p2.cpp  p3.cpp  p4.cpp  p5.cpp  p6.cpp  p7.cpp  problem statement.md
OA/googleSWE3 march 13 2026/: problem.md
OA/metaOA/: Meta SWE OA CTC - 3 CRORE.cpp  problem.md
OA/microsoft interview 24 feb 2026/: problem.md
OA/phonePAY SDE 1 march2026/: problem.md
biweekly-contest/176/: q1.cpp  q2.cpp  q3.cpp  q4.cpp
codechef/problems/: CHEFSUM.cpp
contest/1144/problem/: F.cpp
contest/1805/problem/: D.cpp
contest/1807/problem/: D.cpp
contest/2175/: B.cpp
contest/24/problem/: A.cpp
contest/242/problem/: C.cpp
contest/283932/problem/: B.cpp  E.cpp
contest/378/problem/: C.cpp
contest/433/problem/: B.cpp
contest/638/problem/: C1.cpp
contest/802/problem/: J.cpp
contest/813/problem/: C.cpp
contest/841/problem/: D.cpp
contests/awc0001/tasks/: awc0001_a.cpp  awc02.cpp  awc03.cpp  awc04.cpp  awc05.cpp
contests/codeforces/Codeforces Round 1085 (Div. 1 + Div. 2)/: A.cpp  B.cpp  C.cpp  template.cpp
dsa/problems/: maximum-hamming-distances.cpp  minimum-knight-moves.cpp  minimum-multiplications-to-reach-end.cpp  shortest-distance-from-all-buildings.cpp  shortest-path-to-get-food.cpp  shortest-path-with-minimum-effort.cpp  walls-and-gates.cpp
prefixSum/: RangeXorQueries.cpp  SlidingWindowXor.cpp
problem/1661/: B.cpp
problems/:  USACO 2015 December Contest, Silver Problem 3. Breed Counting.cpp  ADASEA.cpp  Fence Planning .cpp  KOZE.cpp  ada  design-ride-sharing-system.cpp  final-element-after-subarray-deletions.cpp  longest-alternating-subarray-after-removing-at-most-one-element.cpp
problemset/problem/105981/problem/: D.cpp
problemset/problem/1692/: E.cpp
problemset/problem/1926/: C.cpp
problemset/problem/2051/: D.cpp
problemset/problem/2143/: C.cpp
problemset/problem/363/: B.cpp
problemset/problem/474/: B.cpp
problemset/problem/510/: C.cpp
problemset/problem/problem/580/: C.cpp
problemset/task/: 1192.cpp  1193.cpp  1620.cpp  1666.cpp  1667.cpp  1674.cpp  2422.cpp
