cmake_minimum_required(VERSION 3.27)
project(CP)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(CP
        " USACO/2016/prb2/Subsequences Summing to Sevens.cpp"
        biweekly-contest/176/q1.cpp
        biweekly-contest/176/q2.cpp
        biweekly-contest/176/q3.cpp
        biweekly-contest/176/q4.cpp
        CF/edu/course/2/lesson/6/1/practice/contest/283911/problem/A.cpp
        CF/edu/course/2/lesson/6/1/practice/contest/283911/problem/B.cpp
        CF/edu/course/2/lesson/6/1/practice/contest/283911/problem/C.cpp
        CF/edu/course/2/lesson/6/1/practice/contest/283911/problem/D.cpp
        codechef/problems/CHEFSUM.cpp
        contest/1144/problem/F.cpp
        contest/1805/problem/D.cpp
        contest/1807/problem/D.cpp
        contest/2175/B.cpp
        contest/24/problem/A.cpp
        contest/242/problem/C.cpp
        contest/283932/problem/B.cpp
        contest/283932/problem/C.cpp
        contest/283932/problem/E.cpp
        contest/378/problem/C.cpp
        contest/433/problem/B.cpp
        contest/638/problem/C1.cpp
        contest/802/problem/J.cpp
        contest/813/problem/C.cpp
        contest/841/problem/D.cpp
        contests/awc0001/tasks/awc0001_a.cpp
        contests/awc0001/tasks/awc02.cpp
        contests/awc0001/tasks/awc03.cpp
        contests/awc0001/tasks/awc04.cpp
        contests/awc0001/tasks/awc05.cpp
        "contests/codeforces/Codeforces Round 1085 (Div. 1 + Div. 2)/A.cpp"
        "contests/codeforces/Codeforces Round 1085 (Div. 1 + Div. 2)/B.cpp"
        "contests/codeforces/Codeforces Round 1085 (Div. 1 + Div. 2)/C.cpp"
        "contests/codeforces/Codeforces Round 1085 (Div. 1 + Div. 2)/D.cpp"
        "contests/codeforces/Codeforces Round 1085 (Div. 1 + Div. 2)/template.cpp"
        Dqna/hash7.cpp
        Dqna/Hashing1.cpp
        Dqna/hashing2.cpp
        Dqna/hashing3.cpp
        dsa/problems/maximum-hamming-distances.cpp
        dsa/problems/minimum-knight-moves.cpp
        dsa/problems/minimum-multiplications-to-reach-end.cpp
        dsa/problems/shortest-distance-from-all-buildings.cpp
        dsa/problems/shortest-path-to-get-food.cpp
        dsa/problems/shortest-path-with-minimum-effort.cpp
        dsa/problems/walls-and-gates.cpp
        OA/contest1/p1.cpp
        OA/contest1/p2.cpp
        OA/contest1/p3.cpp
        OA/contest1/p4.cpp
        OA/contest1/p5.cpp
        OA/contest1/p6.cpp
        OA/contest1/p7.cpp
        prefixSum/RangeXorQueries.cpp
        prefixSum/SlidingWindowXor.cpp
        problem/1661/B.cpp
        "problems/ USACO 2015 December Contest, Silver Problem 3. Breed Counting.cpp"
        problems/ADASEA.cpp
        problems/design-ride-sharing-system.cpp
        "problems/Fence Planning .cpp"
        problems/final-element-after-subarray-deletions.cpp
        problems/KOZE.cpp
        problems/longest-alternating-subarray-after-removing-at-most-one-element.cpp
        problemset/problem/105981/problem/D.cpp
        problemset/problem/1692/E.cpp
        problemset/problem/1926/C.cpp
        problemset/problem/2051/D.cpp
        problemset/problem/2143/C.cpp
        problemset/problem/363/B.cpp
        problemset/problem/474/B.cpp
        problemset/problem/510/C.cpp
        problemset/problem/problem/580/C.cpp
        problemset/task/1192.cpp
        problemset/task/1193.cpp
        problemset/task/1620.cpp
        problemset/task/1666.cpp
        problemset/task/1667.cpp
        problemset/task/1674.cpp
        problemset/task/2422.cpp
        CONTESTtemplate.cpp
        template.cpp
        "OA/metaOA/Meta SWE OA CTC - 3 CRORE.cpp")
